--- a/index.html
+++ b/index.html
@@ -391,13 +391,13 @@
         <section id="home" class="profile-section fade-in">
             <div class="profile-content">
                 <p class="role-text">Hi, my name is</p>
-                <h1 class="glitch-text" id="typed-name" data-text="ASWANTH P">ASWANTH P</h1>
+                <h1 class="glitch-text" id="typed-name" data-text="ATHUL M">ATHUL M</h1>
                 
-                <p class="subtitle">Security Enthusiast | Cyber Researcher | SOC Analyst | Cybersecurity Analyst | Penetration Tester </p>
+                <p class="subtitle">Red Team Enthusiast | SOC Analyst | Cybersecurity Analyst | Penetration Tester | Cyber Researcher </p>
                 <div class="profile-social-links">
-                    <a href="https://github.com/madmaxx009/" target="_blank" class="social-icon"><i class="fab fa-github"></i></a>
-                    <a href="https://www.linkedin.com/in/aswanthp01" target="_blank" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="mailto:aswanthp009@gmail.com" target="_blank" class="social-icon"><i class="fas fa-envelope"></i></a>
+                    <a href="https://github.com/Zeousultra/" target="_blank" class="social-icon"><i class="fab fa-github"></i></a>
+                    <a href="www.linkedin.com/in/athulm43" target="_blank" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="mailto:athulzeous@gmail.com" target="_blank" class="social-icon"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
         </section>
@@ -406,18 +406,19 @@
         <section id="about" class="about-section section fade-in">
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
-                <p>
-                    Hey there! I'm <strong>Aswanth P</strong>, a curious and passionate cybersecurity enthusiast, always eager to dig deeper into how things really work not just what they do, but why they do it.
-                </p>
-                <p>
-                    My journey into cybersecurity began with curiosity the kind that makes you question every request, inspect every packet, and dive into every unexpected behavior. I see cybersecurity not just as a career, but as a mindset: it's less about the tools and more about thinking critically and staying one step ahead.
-                </p>
-                <p>
-                    I have knowledge across multiple domains in cybersecurity, including networking, security operations, penetration testing, and security analysis. This wide exposure helps me tackle problems from different angles and connect the dots across the entire security landscape.
-                </p>
-                <p>
-                    I'm constantly learning, experimenting, and evolving driven by a genuine love for problem-solving and a passion for protecting the digital world.
-                </p>
+               <p>
+    Hey there! I'm <strong>Athul M</strong> — a passionate cybersecurity enthusiast with a sharp eye for the "how" and "why" behind digital systems. I don’t just explore how things work — I dive into how they break, and more importantly, how to defend them.
+</p>
+<p>
+    My journey into cybersecurity started with relentless curiosity — the kind that makes you inspect every packet, trace every suspicious log, and question every anomaly. To me, cybersecurity isn’t just a field; it’s a mindset. It’s about anticipating threats, thinking like an attacker, and always staying one step ahead.
+</p>
+<p>
+    I have hands-on experience across multiple domains, including <strong>Security Operations (SOC)</strong>, <strong>Penetration Testing</strong>, <strong>Networking</strong>, and <strong>Threat Analysis</strong>. This broad exposure allows me to approach security from both the attacker’s and defender’s perspectives.
+</p>
+<p>
+    I'm constantly learning, experimenting, and evolving — driven by a red teamer's mindset and a genuine passion for protecting the digital world.
+</p>
+
             </div>
         </section>
 
@@ -430,17 +431,17 @@
     <div class="experience-container">
         <div class="experience-card">
             <h3>Cybersecurity Intern</h3>
-            <a href="https://drive.google.com/file/d/1VQZK24LCvZC_Ig8ynJbIK5JCbHfsp1Bq/view"  class="company">Brainwave Matrix Solutions</a>
-            <p class="date">Apr 2025 – May 2025</p>
+            <a href="https://drive.google.com/file/d/1VQZK24/view"  class="company">Brainwave Matrix Solutions</a>
+            <p class="date">Jul 2025 – Aug 2025</p>
             <p class="experience-text">
-                Developed a Python-based Phishing Link Scanner to detect and analyze suspicious URLs for improved security.Created a Password Strength Checker tool that evaluates password complexity and provides real-time feedback to users.
+                Developed a Python-based Phishing Link Scanner to detect and analyze suspicious URLs for enhanced security. Also built a Malware Detection Tool that identifies potentially harmful files using signature and heuristic-based techniques.
             </p>
         </div>
 
         <div class="experience-card">
             <h3>Cybersecurity Intern</h3>
-            <a href="https://drive.google.com/file/d/1t0fb-Ozf7KankyQrGFmYBcs5yP1B71-E/view"  class="company">Pinnacle Labs</a>
-            <p class="date">Mar 2025 – Apr 2025</p>
+            <a href="https://drive.google.com/file/d/1t0fb-/view"  class="company">Pinnacle Labs</a>
+            <p class="date">Jun 2025 – Jul 2025</p>
             <p class="experience-text">
                 Built a Python tool for AES encryption and decryption to enhance data protection, developing a script that securely encrypts and decrypts sensitive information. Additionally, created a password strength analyzer to evaluate and promote better credential security practices.
             </p>
@@ -449,19 +450,19 @@
         <!-- Add more experiences here -->
         <div class="experience-card">
             <h3>Cybersecurity Intern</h3>
-            <p class="company">ShadowFox</p>
+            <p class="company">Prodigy InfoTech</p>
             <p class="date">Mar 2025 – Apr 2025</p>
             <p class="experience-text">
-                Worked as a Cyber Security Intern at ShadowFox, focusing on penetration testing and network security. Performed port scanning, brute-force attacks, traffic interception, and vulnerability exploitation using Metasploit. Strengthened skills in ethical hacking, digital forensics, and offensive security practices.
+               Worked as a Cyber Security Intern at Prodigy InfoTech, focusing on applied cryptography, ethical monitoring, and network security. Successfully developed Python-based tools including a Caesar Cipher encoder/decoder, an Image Encryption utility, a Password Strength Checker, a Keylogger for ethical testing, and a real-time Packet Sniffer. Strengthened skills in data protection, secure coding, traffic analysis, and ethical hacking through hands-on implementation of security-focused projects.
             </p>
         </div>
 
         <div class="experience-card">
             <h3>Application Developer</h3>
             <p class="company">Maxlore Innovations</p>
-            <p class="date">May 2023 – Jun 2023</p>
+            <p class="date">Aug 2023 – Sep 2023</p>
             <p class="experience-text">
-                Worked as an Application Developer Intern at Maxlore Innovations, where I focused on building and maintaining software applications. Collaborated with the development team to implement features, resolve technical issues, and create user-friendly solutions. This role strengthened my coding skills and provided practical experience in software development within a fast-paced environment.
+                Worked as an Android Developer Intern at Accolade Tech Solutions, focusing on building secure and efficient mobile applications. Developed user-friendly Android apps with attention to performance and functionality. Integrated secure APIs and implemented data encryption to ensure user privacy. Collaborated with the team to debug issues, optimize performance, and support smooth app deployment. Gained hands-on experience with Android Studio, Java, and Kotlin in a real-world hybrid work environment.
             </p>
         </div>
     </div>
@@ -477,19 +478,18 @@
                         <h3>Networking</h3>
                     </div>
                     <div class="skill-text">
-                        Strong understanding of the OSI and TCP/IP models, along with practical knowledge of DNS, DHCP, firewalls, IDS/IPS, Active Directory, and proxy server configurations.
+                        Strong understanding of the OSI and TCP/IP models, with a focus on identifying and exploiting weaknesses in network protocols and configurations. Hands-on experience with DNS spoofing, DHCP attacks, and bypassing firewalls, IDS/IPS systems, proxy servers, and misconfigured Active Directory environments
                     </div>
                 </div>
 
-                <!-- Security Operations -->
+                <!-- Offensive Security -->
                 <div class="skill-category">
                     <div class="skill-header">
                         <i class="fas fa-shield-alt"></i>
-                        <h3>Security Operations</h3>
+                        <h3>Offensive Security</h3>
                     </div>
                     <div class="skill-text">
-                        Penetration Testing, Vulnerability Assessment, Incident Response, Threat Hunting, Security Monitoring, Log analysis, Malware analysis, SIEM implementation.
-                    </div>
+                       Red Teaming, Penetration Testing, Vulnerability Assessment, Social Engineering, Initial Access Techniques, Privilege Escalation, Post-Exploitation, Lateral Movement, Evasion Techniques, Payload Crafting, and Web App Exploitation (OWASP Top 10)
                 </div>
 
                 <!-- Tools & Technologies -->
@@ -499,7 +499,8 @@
                         <h3>Tools & Technologies</h3>
                     </div>
                     <div class="skill-text">
-                        Elk stack, Splunk, Snort, Suricata, Wazuh, Burp Suite, Wireshark, Metasploit, BloodHound, Empire, nmap, nessus, OSINT Framework, Nikto.
+                       Metasploit, Burp Suite, BloodHound, Empire, nmap, Wireshark, Nessus, OSINT Framework, Nikto, Snort, Suricata, Splunk, Wazuh, ELK Stack.
+                       Familiar with phishing toolkits, C2 frameworks, and scripting offensive automation using Bash and Python.
                     </div>
                 </div>
             </div>
