--- a/index.html
+++ b/index.html
@@ -491,6 +491,7 @@
                     <div class="skill-text">
                        Red Teaming, Penetration Testing, Vulnerability Assessment, Social Engineering, Initial Access Techniques, Privilege Escalation, Post-Exploitation, Lateral Movement, Evasion Techniques, Payload Crafting, and Web App Exploitation (OWASP Top 10)
                 </div>
+                 </div>
 
                 <!-- Tools & Technologies -->
                 <div class="skill-category">
