--- a/index.html
+++ b/index.html
@@ -517,32 +517,32 @@
                         <div class="cert-logo">
                             <i class="fas fa-shield-alt"></i>
                         </div>
-                        <h3>Certified SOC Analyst (CSA)</h3>
+                        <h3>Certified Ethical Hacker (CEH)</h3>
                         <p class="cert-issuer">EC-Council</p>
                         <p class="cert-details">
-                            <span class="cert-id">ECC0783156294</span>
+                            <span class="cert-id">ECC078316294</span>
                             <span class="cert-date">Issued: June 29, 2025</span>
                         </p>
-                        <a href="https://drive.google.com/file/d/1yYu9A3oOho0OKE7tXVTb_YL8oQ-0x01_/view" target="_blank" class="verify-link">
+                        <a href="https://drive.google.com/file/d/1yYu9A3oOho0OKE7t_/view" target="_blank" class="verify-link">
                             <i class="fas fa-external-link-alt"></i>
                             View Certificate
                         </a>
                     </div>
                 </div>
 
-                <!-- CompTIA Security+ Certificate -->
+                <!-- ADCD Certificate -->
                 <div class="certificate-card">
                     <div class="certificate-content">
                         <div class="cert-logo">
                             <i class="fas fa-shield-alt"></i>
                         </div>
-                        <h3>Certified It Infrastructure and Cyber Soc Analyst</h3>
+                        <h3>Advanced Diploma in Cyber Defencet</h3>
                         <p class="cert-issuer">Red Team Hacker Academy</p>
                         <p class="cert-details">
-                            <span class="cert-id">RTXSTU1554011987</span>
+                            <span class="cert-id">RTXSTU154011987</span>
                             <span class="cert-date">Issued: March 29, 2025</span>
                         </p>
-                        <a href="https://drive.google.com/file/d/1-yy0NOuK01axaK3nPH6908qxnXc0Li6z/view" target="_blank" class="verify-link">
+                        <a href="https://drive.google.com/file/d/1-yy0NOuK01axaK3n6908qxnXc0Li6z/view" target="_blank" class="verify-link">
                             <i class="fas fa-external-link-alt"></i>
                             View Certificate
                         </a>
@@ -555,13 +555,13 @@
         <div class="cert-logo">
             <i class="fas fa-shield-alt"></i>
         </div>
-        <h3>CompTIA Pentest+</h3>
+        <h3>Jr Penetration Tester</h3>
         <p class="cert-issuer">TryHackMe</p>
         <p class="cert-details">
-            <span class="cert-id">THM-MNSDNT4XAD</span>
-            <span class="cert-date">Issued: january 28, 2025</span>
+            <span class="cert-id">THM-QGEWOAKC9Z</span>
+            <span class="cert-date">Issued: july 9, 2025</span>
         </p>
-        <a href="https://drive.google.com/file/d/1-YdR4XyxtD9BrlG9sL5VhjEdd27-hDGM/view" target="_blank" class="verify-link">
+        <a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-QGEWOAKC9Z.pdf" target="_blank" class="verify-link">
             <i class="fas fa-external-link-alt"></i>
             View Certificate
         </a>
@@ -569,19 +569,19 @@
 </div>
 
 
-                <!-- CNSP Certificate -->
+                <!-- google Certificate -->
                 <div class="certificate-card">
                     <div class="certificate-content">
                         <div class="cert-logo">
                             <i class="fas fa-shield-alt"></i>
                         </div>
-                        <h3>Career Essentials in Cybersecurity by Microsoft and LinkedIn</h3>
-                        <p class="cert-issuer">linkedin learning</p>
+                        <h3>Google Cybersecurity Specialization</h3>
+                        <p class="cert-issuer">Google Career </p>
                         <p class="cert-details">
                             <span class="cert-id"></span>
-                            <span class="cert-date">Issued: February 16, 2025</span>
+                            <span class="cert-date">Issued: March 28, 2024</span>
                         </p>
-                        <a href="https://www.linkedin.com/learning/certificates/b40710bc350ae0a8cbf457281841a95db1ab36c0b7eeb0c3b7a023ff90686253?trk=share_certificate" target="_blank" class="verify-link">
+                        <a href="https://www.coursera.org/account/accomplishments/specialization/CLYHHSX7Y8F5" target="_blank" class="verify-link">
                             <i class="fas fa-external-link-alt"></i>
                             View Certificate
                         </a>
@@ -595,13 +595,13 @@
                 <div class="cert-logo">
                     <i class="fas fa-shield-alt"></i>
                 </div>
-                <h3>Cyber Threat Management</h3>
-                <p class="cert-issuer">Cisco Networking Academy</p>
+                <h3>Ethical Hacking Essentials (EHE)</h3>
+                <p class="cert-issuer">EC-Council </p>
                 <p class="cert-details">
                     <span class="cert-id"></span>
-                    <span class="cert-date">Issued: April 02, 2025</span>
+                    <span class="cert-date">Issued: Sept 30, 2023</span>
                 </p>
-                <a href="https://drive.google.com/file/d/1yLi9IIZ3sjhZRKxZkxsIHuvXF98aSJ--/view" target="_blank" class="verify-link">
+                <a href="https://learn.eccouncil.org/certificate/f86fa731-3e14-4477-b281-14a70df69da3" target="_blank" class="verify-link">
                     <i class="fas fa-external-link-alt"></i>
                     View Certificate
                 </a>
@@ -620,9 +620,9 @@
         <p class="cert-issuer">Cisco Networking Academy</p>
         <p class="cert-details">
             <span class="cert-id"></span>
-            <span class="cert-date">Issued: February 01, 2025</span>
+            <span class="cert-date">Issued: Sept 26, 2023</span>
         </p>
-        <a href="https://drive.google.com/file/d/1nIa8wra__s_17udRe2pNNN5p-drmEXyO/view" target="_blank" class="verify-link">
+        <a href="https://www.credly.com/badges/d996bf29-f506-4bb2-889b-d9d942d0ab8e" target="_blank" class="verify-link">
             <i class="fas fa-external-link-alt"></i>
             View Certificate
         </a>
