--- a/index.html
+++ b/index.html
@@ -396,8 +396,8 @@
                 <p class="subtitle">Red Team Enthusiast | SOC Analyst | Cybersecurity Analyst | Penetration Tester | Cyber Researcher </p>
                 <div class="profile-social-links">
                     <a href="https://github.com/Zeousultra/" target="_blank" class="social-icon"><i class="fab fa-github"></i></a>
-                    <a href="www.linkedin.com/in/athulm43" target="_blank" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="mailto:athulzeous@gmail.com" target="_blank" class="social-icon"><i class="fas fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/in/athulm43" target="_blank" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="mailto:athulzeous@gmail.com" class="social-icon"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
         </section>
@@ -536,7 +536,7 @@
                         <div class="cert-logo">
                             <i class="fas fa-shield-alt"></i>
                         </div>
-                        <h3>Advanced Diploma in Cyber Defencet</h3>
+                        <h3>Advanced Diploma in Cyber Defence</h3>
                         <p class="cert-issuer">Red Team Hacker Academy</p>
                         <p class="cert-details">
                             <span class="cert-id">RTXSTU154011987</span>
@@ -579,7 +579,7 @@
                         <p class="cert-issuer">Google Career </p>
                         <p class="cert-details">
                             <span class="cert-id"></span>
-                            <span class="cert-date">Issued: March 28, 2024</span>
+                            <span class="cert-date">Issued: March 15, 2024</span>
                         </p>
                         <a href="https://www.coursera.org/account/accomplishments/specialization/CLYHHSX7Y8F5" target="_blank" class="verify-link">
                             <i class="fas fa-external-link-alt"></i>
