--- a/index.html
+++ b/index.html
@@ -639,11 +639,11 @@
                     <div class="project-content">
                         <div class="project-header">
                             <i class="fas fa-shield-alt"></i>
-                            <h3>Active Directory Pentesting Lab</h3>
+                            <h3>CTF Vulnerable Machine</h3>
                         </div>
-                        <p>Designed and implemented an Active Directory Pentesting Lab in VirtualBox with Windows Server 2016 as Domain Controller, a Windows 10 client, and Kali Linux for attacks. Configured AD with organisational units, users, and groups, performed LLMNR/NBT-NS poisoning, SMB relay attacks, extracted credentials using secretdump.py, cracked NTLM hashes with Hashcat, and executed Pass-the-Hash, Token Impersonation, and Golden Ticket attacks with Mimikatz. Automated enumeration with Bash scripts and visualised privilege escalation paths using BloodHound.</p>
+                        <p>Built a custom CTF-style vulnerable machine in a virtual lab to simulate real-world attack scenarios and enhance offensive security capabilities. The machine includes deliberately misconfigured services (FTP, SSH, HTTP) and common privilege escalation flaws. Conducted enumeration using Nmap, Gobuster, and manual inspection. Gained initial access by exploiting weak file upload mechanisms and leaking credentials. Achieved shell access via SSH and escalated privileges using SUID misconfigurations and local exploits. Automated parts of the exploitation chain with Bash and Python scripts. This lab demonstrates solid understanding of red teaming methodologies—covering initial access, enumeration, exploitation, and post-exploitation.</p>
                         <div class="project-corner-link-wrapper">
-                            <a href="https://github.com/madmaxx009/Active-Directory-Pentesting-Lab" class="project-corner-link">
+                            <a href="https://github.com/Zeousultra/CTF-Vulnerable-Machine" class="project-corner-link">
                                 <i class="fas fa-external-link-alt"></i>
                                 View Project
                             </a>
@@ -658,7 +658,7 @@
                         </div>
                         <p>Simulated real-world attacks in a multi-tier home lab by exploiting a command injection vulnerability on a public Apache server to gain initial access, then escalating privileges via a cronjob misconfiguration. Pivoted into the internal network using Chisel and proxychains, brute-forced SSH credentials on an internal Ubuntu server, and leveraged a misconfigured find command for root access. Compromised Windows Server 2012 through Rejetto HFS RCE and Windows 7 via MS17-010 within an Active Directory setup, performing advanced post-exploitation with Nmap and Metasploit.</p>
                         <div class="project-corner-link-wrapper">
-                            <a href="https://github.com/madmaxx009/-Home-Lab-Setup-With-Network-Pivoting" class="project-corner-link">
+                            <a href="https://github.com/Zeousultra/CTF-Vulnerable-Machine" class="project-corner-link">
                                 <i class="fas fa-external-link-alt"></i>
                                 View Project
                             </a>
@@ -673,7 +673,7 @@
                         </div>
                         <p>Created a SOC home lab to simulate and analyze cyberattacks using Splunk. The setup included a vulnerable Ubuntu machine (victim), Kali Linux (attacker), and a Windows machine running Splunk SIEM. Configured the Ubuntu system to forward logs via Splunk Universal Forwarder and executed attacks such as SSH brute force, web login brute force, directory enumeration, and FTP anonymous login. Detected Windows failed logins (Event ID 4625) and created custom Splunk alerts for real-time threat detection. This project strengthened my skills in log analysis, threat detection, and incident monitoring.</p>
                         <div class="project-corner-link-wrapper">
-                            <a href="https://github.com/madmaxx009/SOC-Home-Lab-Project" class="project-corner-link">
+                            <a href="https://github.com/Zeousultra/Cybersecurity-HomeLab" class="project-corner-link">
                                 <i class="fas fa-external-link-alt"></i>
                                 View Project
                             </a>
@@ -684,9 +684,11 @@
                     <div class="project-content">
                         <div class="project-header">
                             <i class="fas fa-shield-alt"></i>
-                            <h3>Face Recognition Attendance Register System</h3>
+                            <h3>Helmet Detection using AI/ML</h3>
                         </div>
-                        <p>Designed a Face Recognition Attendance System using Python and OpenCV on a Raspberry Pi 4 to automate classroom attendance tracking with real-time face detection and recognition. Implemented automated logging of names, dates, and times into structured formats (CSV/database) and built a user-friendly interface for adding users and viewing records. This scalable system demonstrates skills in computer vision, IoT implementation, software development, and database management, enhancing operational efficiency in educational settings.</p>
+                        <p>Designed and developed an AI-powered helmet detection system aimed at improving road safety enforcement. As part of my final year engineering project, I trained a machine learning model using 1000 images of individuals wearing helmets and 1000 without, enabling accurate classification. The system supports both real-time live detection and analysis of stored images, making it suitable for integration into centralized monitoring systems. It is intended to assist police and law enforcement in identifying traffic violations. This project highlights skills in computer vision, supervised learning, and the deployment of AI models for public safety applications.
+
+</p>
                         <div class="project-corner-link-wrapper">
                            
                         </div>
