--- a/index.html
+++ b/index.html
@@ -458,8 +458,8 @@
         </div>
 
         <div class="experience-card">
-            <h3>Application Developer</h3>
-            <p class="company">Maxlore Innovations</p>
+            <h3>Android Developer Intern</h3>
+            <p class="company">Accolade Tech Solutions</p>
             <p class="date">Aug 2023 – Sep 2023</p>
             <p class="experience-text">
                 Worked as an Android Developer Intern at Accolade Tech Solutions, focusing on building secure and efficient mobile applications. Developed user-friendly Android apps with attention to performance and functionality. Integrated secure APIs and implemented data encryption to ensure user privacy. Collaborated with the team to debug issues, optimize performance, and support smooth app deployment. Gained hands-on experience with Android Studio, Java, and Kotlin in a real-world hybrid work environment.
